# gazelle-repro

./: BUILD.bazel  WORKSPACE  go.mod  go.sum  main.go
